[package]
name = "ddcp"
version = "0.1.0"
edition = "2021"
build = "build.rs"
exclude = ["./external"]
license = "MPL-2.0"

[lib]
name = "ddcp"
path = "src/lib.rs"

[[bin]]
name = "ddcp"
path = "src/bin/main.rs"

[dependencies]
async-trait = "0.1.73"
capnp = "0.18.1"
clap = {version = "4.4.3", features = ["derive", "env"]}
exec = "0.3.1"
flume = "0.11.0"
rand = "0.8.5"
rusqlite = {version = "0.29.0", features = ["load_extension"]}
thiserror = "1.0.48"
tokio = "1.32.0"
tokio-rusqlite = "0.4.0"
tokio-util = "0.7.9"
tracing = { version = "0.1.37", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
veilid-core = { path = "external/veilid/veilid-core" }
xdg = "2.5.2"


[build-dependencies]
capnpc = "0.18.0"
