[package]
name = "ddcp"
version = "0.1.0"
edition = "2021"
build = "build.rs"
exclude = ["./external"]
license = "MPL-2.0"

[lib]
name = "ddcp"
path = "src/lib.rs"

[[bin]]
name = "ddcp"
path = "src/bin/main.rs"

[dependencies]
async-trait = "0.1"
capnp = "0.18"
clap = {version = "4.4", features = ["derive", "env"]}
exec = "0.3"
flume = "0.11"
rand = "0.8"
rusqlite = {version = "0.29", features = ["load_extension"]}
thiserror = "1.0"
tokio = "1.33"
tokio-rusqlite = "0.4"
tokio-util = "0.7"
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
veilid-core = { path = "external/veilid/veilid-core" }
xdg = "2.5"

[patch.crates-io]
async-tls = { git = "https://github.com/async-rs/async-tls", rev = "c58588a" }  # Matching veilid 0.2.5 tls patch

[build-dependencies]
capnpc = "0.18"
