[package]
name = "ddcp"
description = "Distributed decentralized database-to-database copy"
homepage = "https://gitlab.com/cmars232/ddcp"
documentation = "https://docs.rs/ddcp"
repository = "https://gitlab.com/cmars232/ddcp.git"
readme = "README.md"
keywords = ["distributed", "decentralized", "database", "sqlite", "veilid"]
categories = ["command-line-utilities", "database"]
version = "0.2.0"
edition = "2021"
build = "build.rs"
license = "MPL-2.0"

[lib]
name = "ddcp"
path = "src/lib.rs"

[[bin]]
name = "ddcp"
path = "src/bin/main.rs"

[dependencies]
async-trait = "0.1"
capnp = "0.18"
clap = {version = "4.4", features = ["derive", "env"]}
exec = "0.3"
flume = "0.11"
once_cell = "1.19.0"
rand = "0.8"
rusqlite = {version = "0.29", features = ["load_extension"]}
thiserror = "1.0"
tokio = "1.33"
tokio-rusqlite = "0.4"
tokio-util = "0.7"
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
veilid-core = "0.2.5"
xdg = "2.5"

[build-dependencies]
capnpc = "0.18"
